Add FixedSizeQueue for storing ping results
- Added a FixedSizeQueue class to store and manage ping results efficiently.
- Implemented methods to enqueue, dequeue, clear, count items, convert to array, and get enumerator.

--- a/PingPlugin.Core/PingPlugin.Core.csproj
+++ b/PingPlugin.Core/PingPlugin.Core.csproj
@@ -78,6 +78,7 @@
       <DependentUpon>PingEventSourceConfigPanel.cs</DependentUpon>
     </Compile>
     <Compile Include="FFXIVProcessHelper.cs" />
+    <Compile Include="FixedSizeQueue.cs" />
     <Compile Include="NativeMethods.cs" />
     <Compile Include="PluginMain.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
