--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -28,6 +28,9 @@ jobs:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
+    default:
+      run:
+        working-directory: pages
     steps:
       - name: Checkout
         uses: actions/checkout@v4
