chore: Update working directory to 'pages' in static.yml workflow

--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -28,7 +28,7 @@ jobs:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
-    default:
+    defaults:
       run:
         working-directory: pages
     steps:
