chore: Update path for GitHub Pages artifact upload in static.yml workflow

--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -48,8 +48,9 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          # Upload entire repository
-          path: './dist'
+          # Upload entire repository.
+          # defauls:run:working-directory is not affected
+          path: 'pages/dist'
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
